# signals

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
audio-worklets/: Cargo.toml  README.md
audio-worklets/uiua-gain/: Cargo.toml  build.sh
audio-worklets/uiua-gain/src/: lib.rs
audio-worklets/uiua-worklet/: Cargo.toml  build.sh
audio-worklets/uiua-worklet/src/: lib.rs
audio-worklets/uiua-worklet/src/worklets/: biquad.ua  delay.ua  gain.ua
audio-worklets/uiua-worklet/worklets/: gain.ua
audio-worklets/wasm-gain/: Cargo.toml  build.sh
audio-worklets/wasm-gain/src/: lib.rs
scripts/: build-wasm.sh
src/: App.tsx  index.tsx  styles.css
src/audio/: engine.ts  stages.ts
src/audio/worklets/: TextEncoderPolyfill.js  uiua-gain-processor.js  uiua-worklet-processor.js  wasm-gain-processor.js
src/components/: AudioDebug.tsx  Knob.tsx  LeftRightKnob.tsx  LevelMeter.tsx  OscillatorControls.tsx  SignalChain.tsx  Spectrum.tsx  StageCard.tsx  StageControl.tsx  ValueKnob.tsx  VerticalSlider.tsx  Visualizer.tsx  Waveform.tsx
