[workspace]
resolver = "2"
members = ["wasm-gain"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["signals contributors"]

[workspace.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
