[package]
name = "uiua-gain"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"
uiua = { version = "0.17.2", default-features = false, features = ["web"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Performance", "Window", "console"] }

[profile.release]
lto = true
opt-level = 3
